# Python_math

./: .gitignore  CMakeLists.txt  main.cpp
Chapters/: 01_numpy.ipynb  02_sympy.ipynb  03_pandas.ipynb  04_matplotlib.ipynb
custom/inc/: custom_transport.hpp
custom/src/: custom_transport.cpp
lib/inc/: app.hpp  transport_lib.hpp
lib/src/: app.cpp  transport_lib.cpp
